# irontide-client

./: .cgcignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/irontide-api/: Cargo.toml
crates/irontide-api/src/: error.rs  extractors.rs  lib.rs
crates/irontide-api/src/routes/: events.rs  extended.rs  mod.rs  session.rs  torrents.rs  webui.rs
crates/irontide-api/src/routes/qbt_v2/: app.rs  auth.rs  brute_force.rs  categories.rs  files.rs  mod.rs  pieces.rs  preferences.rs  response.rs  security.rs  session_store.rs  state.rs  tags.rs  torrent_dto.rs  torrents.rs  trackers.rs  webseeds.rs
crates/irontide-api/templates/: files_tab.html  info_tab.html  peers_tab.html  preferences_full.html  restart_banner.html  settings_form.html  sidebar_oob.html  stats_bar_oob.html  torrent_detail.html  torrent_list.html  trackers_tab.html
crates/irontide-api/tests/: api_tests.rs  qbt_v2_add_category.rs  qbt_v2_add_source_regression.rs  qbt_v2_add_tags_session.rs  qbt_v2_app.rs  qbt_v2_arr_handshake.rs  qbt_v2_auth.rs  qbt_v2_b5_coverage.rs  qbt_v2_bulk_actions_form_body.rs  qbt_v2_bulk_actions_trace.rs  qbt_v2_categories.rs  qbt_v2_delete_files.rs  qbt_v2_files.rs  qbt_v2_files_m228.rs  qbt_v2_handshake.rs  qbt_v2_info_category_filter.rs  qbt_v2_magnet_meta_propagation.rs  qbt_v2_pieces.rs  qbt_v2_preferences_m171.rs  qbt_v2_preferences_m228.rs  qbt_v2_properties_m170.rs  qbt_v2_regression.rs  qbt_v2_security_argon2.rs  qbt_v2_security_brute_force.rs  qbt_v2_security_csrf.rs  qbt_v2_set_preferences.rs  qbt_v2_set_preferences_m228.rs  qbt_v2_tags.rs  qbt_v2_torrents.rs  qbt_v2_trackers.rs  qbt_v2_webseeds.rs  webui_actions.rs  webui_add_torrent.rs  webui_detail.rs  webui_detail_mutations.rs  webui_preferences.rs  webui_sidebar.rs
crates/irontide-api/tests/common/: mod.rs
crates/irontide-cli/: Cargo.toml  build.rs
crates/irontide-cli/src/: cli_def.rs  client.rs  commands.rs  config.rs  create.rs  daemon.rs  download.rs  error.rs  format.rs  info.rs  main.rs  progress.rs  repl.rs
crates/irontide-cli/src/commands/: completions.rs  config.rs  mod.rs
crates/irontide-cli/src/snapshots/: irontide__progress__tests__snapshot_finished_seeding_flags.snap  irontide__progress__tests__snapshot_json_multi_file.snap  irontide__progress__tests__snapshot_many_files_all_files.snap  irontide__progress__tests__snapshot_many_files_top_n_trailer.snap  irontide__progress__tests__snapshot_missing_info.snap  irontide__progress__tests__snapshot_multi_file_all_zero.snap  irontide__progress__tests__snapshot_multi_file_partial_progress.snap  irontide__progress__tests__snapshot_multi_file_some_complete.snap  irontide__progress__tests__snapshot_paused.snap  irontide__progress__tests__snapshot_single_file_50pct_with_eta.snap  irontide__progress__tests__snapshot_single_file_seeding.snap  irontide__progress__tests__snapshot_single_file_zero_progress.snap  irontide__progress__tests__snapshot_user_seed_mode.snap  irontide__progress__tests__snapshot_very_large_bytes.snap  irontide__progress__tests__snapshot_zero_peers_zero_rates.snap
crates/irontide-cli/src/tui/: events.rs  mod.rs  state.rs  ui.rs
crates/irontide-cli/tests/: build_script_outputs.rs  cli_args.rs  commands_json.rs  completions_tests.rs  config_precedence.rs  config_subcommand.rs  repl_dispatch.rs
crates/irontide-config/: Cargo.toml
crates/irontide-config/src/: lib.rs
crates/irontide-gui/: Cargo.toml
crates/irontide-gui/src/: accel.rs  app.rs  bandwidth_intent.rs  bridge.rs  category_suggest.rs  clipboard.rs  columns.rs  detail.rs  error.rs  first_run.rs  format.rs  ip_filter_page.rs  logs_stats_page.rs  magnet.rs  main.rs  palette.rs  panic_hook.rs  phone_pair.rs  poll.rs  prefs.rs  rss.rs  scheduler.rs  search.rs  sidebar.rs  sidebar_view.rs  single_instance.rs  skin.rs  skin_tokens.rs  speed.rs  torrent_fetch.rs  tray.rs  update_checker.rs  watcher.rs  window_state.rs
crates/irontide-gui/ui/: main.slint  palette.slint  tokens.slint  tweaks.slint
crates/irontide-gui/ui/atoms/: status_dot.slint
crates/irontide-gui/ui/molecules/: file_priority_popup.slint  pill_row.slint  pref_controls.slint  pref_reset_row.slint  pref_select.slint  sidebar_item.slint  sidebar_section.slint
crates/irontide-gui/ui/organisms/: add_torrent_dialog.slint  bandwidth_intent_page.slint  command_palette.slint  create_torrent_dialog.slint  detail_pane.slint  first_run_wizard.slint  ip_filter_page.slint  logs_stats_page.slint  phone_pair_page.slint  preferences_dialog.slint  rss_page.slint  scheduler_page.slint  search_page.slint  sidebar.slint  toolbar.slint  torrent_list.slint
crates/irontide-gui/ui/widgets/: add_magnet_dialog.slint  add_torrent_dialog.slint  confirm_delete_dialog.slint  context_menu.slint  progress_bar.slint  status_bar.slint
crates/irontide-webui-assets/: Cargo.toml
crates/irontide-webui-assets/assets/: index.html  settings.html
crates/irontide-webui-assets/assets/css/: app.css  tokens.css
crates/irontide-webui-assets/assets/js/: col-resize.js  preferences.js  sidebar.js  theme.js  ws-live.js
crates/irontide-webui-assets/src/: lib.rs
docs/: SESSION_NOTES.md
docs/design/: CODEBASE-CLEANUP.md  DESIGN-SYSTEM.md  DESIGN.md  IronTide.html  Menu Reference.html  README.md  Screens Reference.html
docs/design/archive/: DESIGN.md  README.md  design-system.md
docs/design/archive/irontide-gui-spec/: IronTide Design Spec.html  IronTide Prototype.html  README.md
docs/design/archive/irontide-gui-spec/components/: app.jsx  chrome.jsx  data.js  details.jsx  modals.jsx  prefs.jsx  primitives.jsx  toolbar.jsx  tools.jsx  torrent-list.jsx  tweaks.jsx
docs/design/archive/irontide-gui-spec/styles/: tokens.css
docs/design/components/: app.jsx  chrome.jsx  data.js  details.jsx  first-run.jsx  modals.jsx  prefs.jsx  primitives.jsx  sidebar.jsx  toolbar.jsx  tools.jsx  torrent-list.jsx  tweaks.jsx
docs/design/styles/: tokens.css
