[package]
name = "irontide-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP REST API for the irontide engine"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc", "webui"]
crypto-aws-lc = ["irontide/crypto-aws-lc"]
crypto-ring = ["irontide/crypto-ring"]
webui = [
    "dep:irontide-webui-assets",
    "dep:irontide-format",
    "dep:askama",
    "dep:askama_web",
]
dev-webui = ["tower-http/fs"]

[dependencies]
irontide = { path = "../irontide", version = "0.168.0", default-features = false }
aws-lc-rs = "1.16"
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }

# Web UI (behind "webui" feature)
irontide-webui-assets = { path = "../irontide-webui-assets", version = "0.168.0", optional = true }
irontide-format = { workspace = true, optional = true }
askama = { version = "0.15", optional = true }
askama_web = { version = "0.15", features = ["axum-0.8"], optional = true }

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
serde_bytes = { workspace = true }
serde_json = "1"
tempfile = "3"
tokio = { workspace = true }
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
