[package]
name = "irontide-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP REST API for the irontide engine"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc", "webui"]
crypto-aws-lc = ["irontide/crypto-aws-lc"]
crypto-ring = ["irontide/crypto-ring"]
webui = [
    "dep:irontide-webui-assets",
    "dep:irontide-format",
    "dep:askama",
    "dep:askama_web",
]
dev-webui = ["tower-http/fs"]

[dependencies]
irontide = { path = "../irontide", version = "0.172.0", default-features = false }
aws-lc-rs = "1.16"
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
# M172a Lane A: argon2 + zeroize + CIDR + CPU-count for semaphore default.
argon2 = { workspace = true }
zeroize = { workspace = true }
ipnet = { workspace = true }
num_cpus = { workspace = true }

# Web UI (behind "webui" feature)
irontide-webui-assets = { path = "../irontide-webui-assets", version = "0.172.0", optional = true }
irontide-format = { workspace = true, optional = true }
askama = { version = "0.15", optional = true }
askama_web = { version = "0.15", features = ["axum-0.8"], optional = true }

[dev-dependencies]
futures-util = "0.3"
hex = "0.4"
http-body-util = "0.1"
serde_bytes = { workspace = true }
serde_json = "1"
tempfile = "3"
# M172a Lane C: `test-util` gates `tokio::time::{advance, pause}` — the
# clock-pausing primitive used by the brute-force ban suite to test ban
# expiry without sleeping wall-clock seconds.
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
# M172a Lane A: integration tests exercise the on-disk migration helper.
irontide-config = { path = "../irontide-config", version = "0.172.0" }
# M172a Lane B: real-TCP reqwest-based *arr handshake smoke tests.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "cookies",
] }
