[package]
name = "irontide-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP REST API for the irontide engine"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc", "webui"]
crypto-aws-lc = ["irontide/crypto-aws-lc"]
crypto-ring = ["irontide/crypto-ring"]
webui = [
    "dep:irontide-webui-assets",
    "dep:irontide-format",
    "dep:askama",
    "dep:askama_web",
    "dep:reqwest",
    "dep:thiserror",
    "dep:url",
]
dev-webui = ["tower-http/fs"]

[dependencies]
irontide = { path = "../irontide", version = "1.0.0-rc13", default-features = false }
aws-lc-rs = "1.16"
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
# M172a Lane A: argon2 + zeroize + CIDR + CPU-count for semaphore default.
argon2 = { workspace = true }
zeroize = { workspace = true }
ipnet = { workspace = true }
num_cpus = { workspace = true }

# Web UI (behind "webui" feature)
irontide-webui-assets = { path = "../irontide-webui-assets", version = "1.0.0-rc13", optional = true }
irontide-format = { workspace = true, optional = true }
askama = { version = "0.15", optional = true }
askama_web = { version = "0.15", features = ["axum-0.8"], optional = true }
# M230: Web UI `/webui/add-url` fetches `.torrent` blobs from user-supplied
# URLs. `blocking` is required because the fetch runs inside
# `spawn_blocking` (mirrors `irontide-gui::torrent_fetch`'s pattern).
# `rustls-tls` keeps the dep off OpenSSL. The dev-dep declaration below
# (rustls-tls + cookies) coexists — Cargo unions the feature sets.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
], optional = true }
# M230: `WebUiFetchError` typed errors for the URL fetch handler.
thiserror = { workspace = true, optional = true }
# M231: tracker host extraction for the WebUI sidebar tracker filter.
# `url = "2"` is the same major as `irontide-session`'s dep; workspace
# uses a single version so no duplication.
url = { version = "2", optional = true }

[dev-dependencies]
futures-util = "0.3"
hex = "0.4"
http-body-util = "0.1"
serde_bytes = { workspace = true }
serde_json = "1"
tempfile = "3"
# M172a Lane C: `test-util` gates `tokio::time::{advance, pause}` — the
# clock-pausing primitive used by the brute-force ban suite to test ban
# expiry without sleeping wall-clock seconds.
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
# M172a Lane A: integration tests exercise the on-disk migration helper.
irontide-config = { path = "../irontide-config", version = "1.0.0-rc13" }
# M172a Lane B: real-TCP reqwest-based *arr handshake smoke tests.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "cookies",
] }
# v0.173.1 Lane B (Class C): capture emitted `tracing` events inside
# individual tests so we can assert that session errors surface as
# `warn!` logs from the bulk-action handlers. Fixed version pin — the
# macro's attribute-namespace is API-stable at 0.2.
#
# `no-env-filter` is required because integration tests in `tests/` are
# compiled as separate crates; without it, the default `RUST_LOG` filter
# scopes to the test crate itself and drops `irontide_api` logs (the
# actual subject of the Class C assertions).
tracing-test = { version = "0.2", features = ["no-env-filter"] }
# v0.173.2: direct dev-dep on irontide-session (NOT via the irontide facade)
# to activate the test-util feature without re-enabling the facade's default
# crypto-aws-lc feature in test builds. Used only by qbt_v2_magnet_meta_propagation.rs
# (the A9 HTTP integration test).
irontide-session = { path = "../irontide-session", features = ["test-util"] }
# v0.173.2: direct dev-deps on leaf crates referenced by the A9 helpers in
# tests/common/mod.rs. `irontide-core` is NOT transitively accessible as a
# crate name from the test binary (only reachable via the `irontide`
# facade's re-exports, which aren't usable as `irontide_core::...` paths).
# `irontide-core` keeps its default features (`crypto-aws-lc`) because
# `sha1()` is `#[cfg]`-gated on the crypto backend and the feature is
# already unified-on from the `irontide-api` → `irontide` → `irontide-core`
# chain — no new feature surface.
irontide-core = { path = "../irontide-core", version = "1.0.0-rc13" }
irontide-bencode = { path = "../irontide-bencode", version = "1.0.0-rc13" }
