[package]
name = "irontide-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line BitTorrent client powered by irontide"
publish = false

[[bin]]
name = "irontide"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc"]
crypto-ring = ["irontide/crypto-ring"]
crypto-openssl = ["irontide/crypto-openssl"]
crypto-aws-lc = ["irontide/crypto-aws-lc"]
io-uring = ["irontide/io-uring"]
iocp = ["irontide/iocp"]

[dependencies]
irontide = { path = "../irontide", version = "0.173.0", default-features = false }
irontide-api = { path = "../irontide-api", version = "0.173.0" }
irontide-config = { workspace = true }
irontide-format = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { workspace = true }
serde_json = "1"
core_affinity = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
thiserror = { workspace = true }
rustyline = "14"
shlex = "1"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
clap_complete = "4"
toml = "0.8"
toml_edit = "0.22"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
tempfile = "3"
