[package]
name = "irontide-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared configuration pipeline for irontide binaries"
publish = false

[lints]
workspace = true

[dependencies]
irontide-session = { path = "../irontide-session", version = "0.171.0" }
serde = { workspace = true }
figment = { version = "0.10", features = ["toml", "env"] }
directories = "5"
shellexpand = "3"
toml = "0.8"
tokio = { workspace = true }
core_affinity = { workspace = true }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
