[package]
name = "irontide-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Slint desktop GUI for irontide"
publish = false

[[bin]]
name = "irontide-gui"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc"]
crypto-ring = ["irontide/crypto-ring"]
crypto-openssl = ["irontide/crypto-openssl"]
crypto-aws-lc = ["irontide/crypto-aws-lc"]

[dependencies]
irontide = { path = "../irontide", version = "0.187.0", default-features = false }
irontide-config = { workspace = true }
irontide-format = { workspace = true }
slint = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rfd = "0.15"
toml = "0.8"

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"
