[package]
name = "irontide-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Slint desktop GUI for irontide"
publish = false

[[bin]]
name = "irontide-gui"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc"]
crypto-ring = ["irontide/crypto-ring"]
crypto-openssl = ["irontide/crypto-openssl"]
crypto-aws-lc = ["irontide/crypto-aws-lc"]

[dependencies]
irontide = { path = "../irontide", version = "0.212.0", default-features = false }
irontide-api = { path = "../irontide-api", version = "0.212.0", features = ["webui"] }
irontide-config = { workspace = true }
irontide-format = { workspace = true }
slint = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rfd = "0.15"
toml = "0.8"
tray-icon = { workspace = true }
notify-debouncer-full = { workspace = true }
libc = "0.2"
serde_json = "1"
serde = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
qrcode = "0.14"
directories = "5"

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"
