[package]
name = "irontide-webui-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vendored static assets for the IronTide Web UI (HTMX + Pico CSS)"
publish = false

[lints]
workspace = true

[dependencies]
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
